--- a/v0.2.0/httpscaledobject.yaml
+++ b/v0.2.0/httpscaledobject.yaml
@@ -3,7 +3,7 @@ apiVersion: http.keda.sh/v1alpha1
 metadata:
     name: xkcd
 spec:
-    host: 127.0.0.1:8080
+    host: localhost
     scaleTargetRef:
         deployment: xkcd
         service: xkcd
